moved screenshot to separate file

--- a/src/Summon/Makefile
+++ b/src/Summon/Makefile
@@ -4,7 +4,8 @@ OBJS = ScriptCommand.o \
        summonCommands.o \
        SummonController.o \
        SummonModel.o \
-       SummonView.o
+       SummonView.o \
+       screenshot.o
 
 all:: $(MODULE)
 
